--- a/bat/abr.html
+++ b/bat/abr.html
@@ -187,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="#">Bus Arrival Timings</a>
+                                    <a href="../bat.html">Bus Arrival Timings</a>
                                 </li>
                             </ol>
                         </nav>
@@ -195,13 +195,13 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Search Bus Stop</h1>
+                                    <h1 class="page-title" id="filter-title">All Bus Stops</h1>
                                 </div>
                                 <div style="position: relative; max-width: 400px; margin-top: 5px;">
                                     <i class="fa-solid fa-search"
                                         style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
                                     <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search Bus Stop Code" style="padding-left: 35px; width: 100%;">
+                                        placeholder=" Search Bus Stop" style="padding-left: 35px; width: 100%;">
                                 </div>
 
                             </div>
@@ -225,11 +225,11 @@
                         </li>
 
                         <li>
-                            <a href="bat.html" id="search-bus-stop-button" class="active">Search Bus Stop</a>
+                            <a href="sbs.html" id="search-bus-stop-button">Search Bus Stop</a>
                         </li>
 
                         <li>
-                            <a href="abs.html">Bus Stops</a>
+                            <a href="abs.html" class="active">Bus Stops</a>
                         </li>
                     </ul>
 
@@ -251,32 +251,13 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
-            <div class="fleet-legend">
-                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
-                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
+            <div class="list-group">
+                <p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span>Fetching Bus Stops list for the first time...</p>
             </div>
-
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col" class="svc-spacing">Services</th>
-                        <th scope="col" class="departure-spacing">Departure Times</th>
-                        <th class="operator-column" scope="col">Operator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="message">
-                        <td colspan="3">
-                            <p
-                                style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;">
-                                <span class="spinner"></span> Loading Data...
-                            </p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
+            <div class="pagination-buttons">
+                <button id="prev-button" class="btn pw-btn-prev btn-2 mt-15" style="display: none;">Previous</button>
+                <button id="next-button" class="btn pw-btn-next btn-2 mt-15" style="display: none;">Next</button>
+            </div>
         </div>
     </section>
 
@@ -330,205 +311,142 @@
 
     <script src="../js/utils.js"></script>
 
-
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('DOMContentLoaded', async () => {
             const searchInput = document.getElementById('bus-stop-search'); // Search input field
-            const tableBody = document.querySelector('table tbody'); // Table body
-            const footer = document.querySelector('.footer'); // Footer
+            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Search Bus Stop button
 
-            let idleTimeout; // Timer for idle detection
-            let isIdle = false; // Flag to track if the user is idle
-            const idleTimeLimit = 20000; // 20 seconds of inactivity to consider idle
-
-            // Get the BusStopCode from the URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const busStopCode = urlParams.get('BusStopCode');
-
-            if (busStopCode) {
-                searchInput.value = busStopCode;
-                fetchBusArrivals();
-            } else {
-                const savedSearch = sessionStorage.getItem('busStopSearch');
-                if (savedSearch) {
-                    searchInput.value = savedSearch;
-                    fetchBusArrivals();
-                } else {
-                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code on the Search Box.</td></tr>';
-                    footer.style.display = 'none';
-                }
-            }
-
-            const updateUrl = () => {
-                const url = new URL(window.location.href);
-                const currentValue = searchInput.value.trim();
-
-                if (currentValue) {
-                    url.searchParams.set('busStopCode', currentValue);
-                } else {
-                    url.searchParams.delete('busStopCode');
-                }
-
-                window.history.replaceState({}, document.title, url.toString());
-            };
-
-            searchInput.addEventListener('input', debounce(() => {
-                updateUrl();
-                fetchBusArrivals();
-            }, 300));
-
-            // Auto-refresh data when idle
-            const startAutoRefresh = () => {
-                if (!isIdle) {
-                    isIdle = true;
-                    fetchBusArrivals();
-                    setInterval(() => {
-                        if (isIdle) {
-                            fetchBusArrivals();
-                        }
-                    }, 5000); // Refresh every 5 seconds
-                }
-            };
-
-            const resetIdleTimer = () => {
-                isIdle = false;
-                clearTimeout(idleTimeout);
-                idleTimeout = setTimeout(startAutoRefresh, idleTimeLimit);
-            };
-
-            // Detect user activity
-            ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
-                window.addEventListener(event, resetIdleTimer);
+            // Clear the search bar when the "Search Bus Stop" button is clicked
+            searchBusStopButton.addEventListener('click', () => {
+                searchInput.value = ''; // Clear the search input field
             });
 
-            // Start the idle timer
-            resetIdleTimer();
-        });
+            const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
+            const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
+            const prevButton = document.getElementById('prev-button'); // Previous button
+            const nextButton = document.getElementById('next-button'); // Next button
+            const limit = 20; // Number of items per page
+            let allBusStops = []; // Store all fetched bus stops for searching
+            let currentPage = 1; // Current page number
+            let totalPages = 1; // Total number of pages
 
-        function debounce(func, delay) {
-            let timeout;
-            return function (...args) {
-                clearTimeout(timeout);
-                timeout = setTimeout(() => func.apply(this, args), delay);
-            };
-        }
+            // Function to fetch all bus stops in batches
+            async function fetchAllBusStops() {
+                let allBusStops = [];
+                let skip = 0;
+                const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
 
-        // Updated fetchBusArrivals function
-        async function fetchBusArrivals() {
-            try {
-                const searchInput = document.getElementById('bus-stop-search').value.trim();
-                const tableBody = document.querySelector('table tbody');
-                const footer = document.querySelector('.footer');
+                while (true) {
+                    try {
+                        const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
+                            method: 'GET',
+                            headers: {
+                                accept: 'application/json',
+                            },
+                        });
 
-                if (!searchInput) {
-                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code on the Search Box.</td></tr>';
-                    footer.style.display = 'none'; // Hide footer if no input
+                        if (!response.ok) {
+                            throw new Error('Failed to fetch bus stops');
+                        }
+
+                        const data = await response.json();
+                        allBusStops = allBusStops.concat(data.value);
+
+                        if (data.value.length < batchSize) {
+                            break; // Exit loop if fewer than `batchSize` items are returned
+                        }
+
+                        skip += batchSize; // Increment skip for the next batch
+                    } catch (error) {
+                        console.error('Error fetching bus stops:', error);
+                        break;
+                    }
+                }
+
+                // Save the fetched bus stops to localStorage
+                localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
+                return allBusStops;
+            }
+
+            // Function to display bus stops for the current page
+            function displayBusStops(busStops, page) {
+                const startIndex = (page - 1) * limit;
+                const endIndex = startIndex + limit;
+                const paginatedBusStops = busStops.slice(startIndex, endIndex);
+
+                // Clear the list group and display the bus stops
+                listGroup.innerHTML = '';
+                if (busStops.length === 0) {
+                    listGroup.innerHTML = '<p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span> Searching for nearby bus stops...</p>';
+                    prevButton.style.display = 'none'; // Hide buttons if fetching message is shown
+                    nextButton.style.display = 'none';
                     return;
                 }
 
-                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-                url.searchParams.append('BusStopCode', searchInput);
-
-                const response = await fetch(url);
-
-                if (!response.ok) {
-                    throw new Error('Failed to fetch bus arrivals');
-                }
-
-                const data = await response.json();
-                console.log('API Response:', data);
-
-                tableBody.innerHTML = '';
-
-                if (!data.Services || data.Services.length === 0) {
-                    tableBody.innerHTML = '<tr><td colspan="3">No data available</td></tr>';
-                    footer.style.display = 'none'; // Hide footer if no data
-                    return;
-                }
-
-                const now = new Date();
-
-                data.Services.forEach((service) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-            <td class="svcNumtd">
-                <p class="svcNum">${service.ServiceNo}</p>
-            </td>
-            <td class="departure-spacing">
-                <span class="bus-time">
-                    ${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : '-'} 
-                    &nbsp; 
-                    ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
-                </span>
-                <span class="bus-time">
-                    ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
-                    &nbsp; 
-                    ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 30px; height: auto;">` : ''}
-                </span>
-            </td>
-            <td> 
-                ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
-            </td>
-        `;
-                    tableBody.appendChild(row);
+                paginatedBusStops.forEach((busStop) => {
+                    const listItem = document.createElement('a');
+                    listItem.href = `bat.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`; // Pass BusStopCode as a query parameter
+                    listItem.className = 'list-group-item list-group-item-action bus-stop-code';
+                    listItem.setAttribute('data-code', busStop.BusStopCode);
+                    listItem.setAttribute('data-description', busStop.Description);
+                    listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
+                    listGroup.appendChild(listItem);
                 });
 
-                footer.style.display = 'block'; // Show footer if data is available
+                // Check if there are any items to display
+                const hasItems = paginatedBusStops.length > 0;
 
-            } catch (error) {
-                console.error('Error fetching bus arrivals:', error);
-                const tableBody = document.querySelector('table tbody');
-                const footer = document.querySelector('.footer');
-                tableBody.innerHTML = '<tr><td colspan="3">Error loading data</td></tr>';
-                footer.style.display = 'none'; // Hide footer on error
-            }
-        }
-
-        // Function to format ISO string to hh:mm or show "Arr" if the time has passed
-        function formatArrivalTimeOrArr(isoString, now) {
-            const arrivalTime = new Date(isoString);
-
-            // Allow a small margin for matching the current time
-            const timeDifference = arrivalTime - now;
-
-            // If the arrival time is in the past or within the current minute, show "Arr"
-            if (timeDifference <= 0 && timeDifference > -60000) {
-                return `<span class="arrival-now">Arr</span>`;
+                // Update button states
+                prevButton.style.display = hasItems && page > 1 ? 'inline-block' : 'none';
+                nextButton.style.display = hasItems && page < totalPages ? 'inline-block' : 'none';
             }
 
-            // Otherwise, format the time as hh:mm
-            const hours = arrivalTime.getHours().toString().padStart(2, '0');
-            const minutes = arrivalTime.getMinutes().toString().padStart(2, '0');
-            return `${hours}:${minutes}`;
-        }
-
-        function formatArrivalTime(isoString) {
-            const date = new Date(isoString);
-            const hours = date.getHours().toString().padStart(2, '0');
-            const minutes = date.getMinutes().toString().padStart(2, '0');
-            const formattedTime = `${hours}:${minutes}`;
-
-            const now = new Date();
-            const currentHours = now.getHours().toString().padStart(2, '0');
-            const currentMinutes = now.getMinutes().toString().padStart(2, '0');
-            const currentTime = `${currentHours}:${currentMinutes}`;
-
-            if (formattedTime === currentTime) {
-                return `<span class="arrival-now">Arr</span>`;
-            }
-            return formattedTime;
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Select the "Search Bus Stop" button
-            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
-
-            if (searchBusStopButton && searchInput) {
-                searchBusStopButton.addEventListener('click', () => {
-                    searchInput.value = ''; // Clear the search input field
-                    sessionStorage.removeItem('busStopSearch'); // Clear the session storage value
+            // Function to filter bus stops based on search input
+            function filterBusStops(query) {
+                const filteredBusStops = allBusStops.filter((busStop) => {
+                    const busStopCode = busStop.BusStopCode.toLowerCase();
+                    const description = busStop.Description.toLowerCase();
+                    return busStopCode.includes(query) || description.includes(query);
                 });
+
+                totalPages = Math.ceil(filteredBusStops.length / limit);
+                currentPage = 1; // Reset to the first page
+                displayBusStops(filteredBusStops, currentPage);
             }
+
+            // Add event listener to the search input
+            searchInput.addEventListener('input', (event) => {
+                const query = event.target.value.toLowerCase(); // Get the search query in lowercase
+                filterBusStops(query); // Filter the bus stops based on the search query
+            });
+
+            // Add event listeners to pagination buttons
+            prevButton.addEventListener('click', () => {
+                if (currentPage > 1) {
+                    currentPage--;
+                    displayBusStops(allBusStops, currentPage);
+                }
+            });
+
+            nextButton.addEventListener('click', () => {
+                if (currentPage < totalPages) {
+                    currentPage++;
+                    displayBusStops(allBusStops, currentPage);
+                }
+            });
+
+            // Load bus stops from localStorage or fetch from API
+            const cachedBusStops = localStorage.getItem('allBusStops');
+            if (cachedBusStops) {
+                console.log('Loading bus stops from localStorage...');
+                allBusStops = JSON.parse(cachedBusStops);
+            } else {
+                console.log('Fetching all bus stops...');
+                allBusStops = await fetchAllBusStops();
+            }
+
+            totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
+            displayBusStops(allBusStops, currentPage); // Display the first page
         });
     </script>
 
