--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -187,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="#">Bus Arrival Timings</a>
+                                    <a href="../bat.html">Bus Arrival Timings</a>
                                 </li>
                             </ol>
                         </nav>
@@ -218,7 +218,7 @@
                         </li>
 
                         <li>
-                            <a href="bat.html" id="search-bus-stop-button">Search Bus Stop</a>
+                            <a href="sbs.html" id="search-bus-stop-button">Search Bus Stop</a>
                         </li>
 
                         <li>
