--- a/index.html
+++ b/index.html
@@ -159,13 +159,7 @@
     <div class="main-content">
         <div class="pw-portfolio-area-featured clearfix" id="featured">
             <div class="container-xxl container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
-                            <h2>Featured Works</h2>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="row pw-portfolio">
 
                     <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
@@ -174,7 +168,7 @@
                             <img src="https://i.imgur.com/kSHiKjW.png" alt>
                             <div class="hover-content-blog">
                                 <h4>Bus Arrival Timings</h4>
-                                <a class="info" href="bat/nbs.html" class="portfolio-img"><i
+                                <a class="info" href="bat/bat.html" class="portfolio-img"><i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
