--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -40,6 +40,79 @@
     .footer {
         display: none;
     }
+
+    .bus-stop {
+    display: flex;
+    justify-content: space-between; /* Align content to the left and right */
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+}
+
+    .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #94d40b;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    .bus-stop-code img {
+        width: 25px;
+        height: auto;
+        cursor: default;
+    }
+
+    .bus-stop-code-text,
+    body.dark-mode .bus-stop-code-text {
+        font-size: 18px;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px 6px;
+        cursor: default;
+    }
+
+    .bus-stop-description,
+    body.dark-mode .bus-stop-description {
+        font-size: 20px;
+        font-weight: bold;
+        margin-left: 12px;
+        cursor: default;
+    }
+
+    .bus-stop-info {
+        display: flex;
+        align-items: center;
+        padding-right: 1em;
+    }
+
+    .bus-stop-details {
+        padding-right: 1em;
+    }
+
+    @media (max-width: 700px) {
+        .bus-stop-info {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .bus-stop-description,
+        body.dark-mode .bus-stop-description {
+            margin-left: 0px;
+            margin-top: 5px;
+        }
+    }
 </style>
 
 <body>
@@ -392,48 +465,6 @@
             }
         }
 
-      // Display the 3 nearest bus stops
-function displayBusStops(busStops) {
-    const busStopsContainer = document.getElementById('bus-stops');
-    busStopsContainer.innerHTML = ''; // Clear previous results
-
-    if (!busStops || busStops.length === 0) {
-        busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-circle-info"></i>No Bus Stops found nearby.</p>';
-        return;
-    }
-
-    busStops.forEach((busStop) => {
-        const distance = busStop.distance < 1
-            ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
-            : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
-
-        const busStopElement = document.createElement('div');
-        busStopElement.className = 'bus-stop';
-        busStopElement.innerHTML = `
-            <p class="bs-name"><span>${busStop.Description}</span></p>
-            <p class="bs-info">
-                <span style="font-weight:bold;">${busStop.BusStopCode}</span> | 
-                <span>${busStop.RoadName}</span> | 
-                <span>${distance}</span>
-            </p>
-        `;
-
-        // Add click event listener to the entire div
-        busStopElement.addEventListener('click', () => {
-            // Navigate to buszy.html with the BusStopCode as a query parameter
-            window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
-        });
-
-        // Add click event listener to the "Pin" button
-        const pinButton = busStopElement.querySelector('.pin-btn');
-        pinButton.addEventListener('click', (event) => {
-            event.stopPropagation(); // Prevent triggering the parent div's click event
-            pinBusStop(busStop); // Pin the bus stop
-        });
-
-        busStopsContainer.appendChild(busStopElement);
-    });
-}
 
 // Function to toggle pin/unpin for a bus stop
 function togglePinBusStop(busStop, pinButton) {
@@ -490,25 +521,24 @@ function displayBusStops(busStops) {
         const busStopElement = document.createElement('div');
         busStopElement.className = 'bus-stop';
         busStopElement.innerHTML = `
-            <p class="bs-name"><span>${busStop.Description}</span></p>
-            <p class="bs-info">
-                <span style="font-weight:bold;">${busStop.BusStopCode}</span> | 
-                <span>${busStop.RoadName}</span> | 
+            <div class="bus-stop-info">
+                <div class="bus-stop-code">
+                    <img src="assets/bus-icon.png" alt="Bus Icon"> <!-- Replace with your bus icon path -->
+                    <span class="bus-stop-code-text">${busStop.BusStopCode}</span>
+                </div>
+                <div class="bus-stop-details">
+                <span class="bus-stop-description">${busStop.Description}</span>&nbsp;|&nbsp;
+                <span>${busStop.RoadName}</span>&nbsp;|&nbsp;
                 <span>${distance}</span>
-            </p>
-            <button class="${isPinned ? 'btn btn-unpin btn-nbs btn-sm' : 'btn btn-toPin btn-nbs btn-sm'}">
+                </div>
+            </div>
+            <button class="${isPinned ? 'btn btn-unpin btn-nbs btn-sm' : 'btn btn-toPin btn-nbs btn-sm'} pin-button">
                 <i class="${isPinned ? 'fa-solid fa-thumbtack-angle-slash' : 'fa-sharp fa-regular fa-thumbtack-angle'}"></i>
             </button>
         `;
 
-        // Add click event listener to the entire div
-        busStopElement.addEventListener('click', () => {
-            // Navigate to buszy.html with the BusStopCode as a query parameter
-            window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
-        });
-
         // Add click event listener to the "Pin" button
-        const pinButton = busStopElement.querySelector('button');
+        const pinButton = busStopElement.querySelector('.pin-button');
         pinButton.addEventListener('click', (event) => {
             event.stopPropagation(); // Prevent triggering the parent div's click event
             togglePinBusStop(busStop, pinButton); // Toggle pin/unpin
