--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -90,7 +90,7 @@
         font-size: 20px;
         font-weight: bold;
         margin-left: 12px;
-        cursor: default;
+        cursor: pointer;
     }
 
     .bus-stop-info {
